# example-jsaddle-project

./: README.md  default.nix  example-jsaddle-project.cabal  release.nix
app/: main.hs
src/: Frontend.hs
