name:                example-jsaddle-project
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Divam
maintainer:          dfordivam@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

-- This flag is required as the `arch(wasm32)` condition is not handled
-- properly by tools like cabal2nix, and possible hackage
flag wasm32
  description: Build for wasm32 architecture
  default: False
  manual: True

library
  exposed-modules:   Frontend
  build-depends:       base >=4.11 && <5
                       , jsaddle
                       , lens
  hs-source-dirs:      src
  default-language:    Haskell2010

executable example-jsaddle-project
  main-is:             main.hs
  hs-source-dirs:      app
  build-depends:       base >=4.10 && <5
                       , jsaddle
                       , example-jsaddle-project
  if flag(wasm32)
    build-depends: jsaddle-wasm
  else
    build-depends: jsaddle-warp
  default-language:    Haskell2010
